<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btImc"
        android:layout_width="189dp"
        android:layout_height="55dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="136dp"
        android:text="@string/btImc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btVogal"
        android:layout_width="189dp"
        android:layout_height="51dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="244dp"
        android:text="@string/btVogal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btSoma"
        android:layout_width="191dp"
        android:layout_height="47dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="348dp"
        android:text="@string/btSoma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="452dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>