<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaIMC">

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/etPeso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="340dp"
        android:text="@string/btCalcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/etAltura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>